--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -1,3 +1,84 @@
-{% for post in posts %}
-    <p><a href="{% url 'post' post.id %}">{{ post.content_html }}</a></p>
-{% endfor %}
+{% extends 'base.html' %}
+{% load image_extras %}
+
+{% block content %}
+    {% for post in posts %}
+        <a href="{% url 'post' post.id %}">
+            <div class="border-2 border-transparent rounded-lg m-4 p-2 bg-white">
+                <div class="flex space-x-2">
+                    <div class="w-12">
+                        <img src="{{ post.author.avatar_url }}" alt="avatar of: {{ post.author.name }}"
+                         class="rounded-full inline-block h-12 w-12"/>
+                    </div>
+                    <div class="space-y-1">
+                        <p class="font-semibold text-indigo-900">{{ post.author.name }}</p>
+                        {% if post.text %}
+                            <p class="text-indigo-900">{{ post.text }}</p>
+                        {% endif %}
+                        {% if post.media.all %}
+                            {% for media in post.media.all %}
+                                <img src="data:image;base64,{{ media.media_data | bin_2_img }}"
+                                     class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
+                            {% endfor %}
+                        {% endif %}
+                        {% if post.link %}
+                            <a href="{{ post.link.url }}" class="hyperlink text-sm space-y-1">
+                                <p class=''>
+                                    {% if post.link.preview_text %}
+                                        {{ post.link.preview_text }}
+                                    {% else %}
+                                        {{ post.link.url }}
+                                    {% endif %}
+                                </p>
+                                {% if post.link.preview_image_url %}
+                                    <img src="{{ post.link.preview_image_url }}"
+                                         class="rounded h-44 w-96 object-cover"/>
+                                {% endif %}
+                            </a>
+                        {% endif %}
+                        {% if post.poll %}
+                            <p>This is a poll.</p>
+                            <br>
+                            {% for choice in post.poll.choices %}
+                                {{ choice.choice }}
+                                <br>
+                            {% endfor %}
+                        {% endif %}
+                        <div class="flex space-x-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor"
+                                 class="h-6 w-6">
+                                <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M12 6v6m0 0v6m0-6h6m-6 0H6"
+                                ></path>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor"
+                                 class="h-6 w-6">
+                                <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
+                                ></path>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor"
+                                 class="h-6 w-6">
+                                <path stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      stroke-width="2"
+                                      d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+                                ></path>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
+
+    {% endfor %}
+{% endblock %}
