--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -8,10 +8,16 @@
                 <div class="flex space-x-2">
                     <div class="w-12 flex-none">
                         <img src="{{ post.author.avatar_url }}" alt="avatar of: {{ post.author.name }}"
-                         class="rounded-full"/>
+                             class="rounded-full"/>
                     </div>
+
                     <div class="space-y-1">
-                        <p class="font-semibold text-indigo-900">{{ post.author.name }}</p>
+
+                    <div class="flex items-center mb-0.5">
+                        <span class="font-semibold text-indigo-900">{{ post.author.name }}</span>
+                        <span class="text-xs text-purple-900 text-opacity-30"> &nbsp;- {{ post.time_before_gp_closed }}d before G+ closed</span>
+                    </div>
+
                         {% if post.text %}
                             <p class="text-indigo-900">{{ post.text }}</p>
                         {% endif %}
@@ -45,35 +51,60 @@
                             {% endfor %}
                         {% endif %}
                         <div class="flex space-x-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                 stroke="currentColor"
-                                 class="h-6 w-6">
-                                <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M12 6v6m0 0v6m0-6h6m-6 0H6"
-                                ></path>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                 stroke="currentColor"
-                                 class="h-6 w-6">
-                                <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
-                                ></path>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                 stroke="currentColor"
-                                 class="h-6 w-6">
-                                <path stroke-linecap="round"
-                                      stroke-linejoin="round"
-                                      stroke-width="2"
-                                      d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
-                                ></path>
-                            </svg>
+                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                <div slot="avatar">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                         stroke="currentColor"
+                                         class="h-4 w-4">
+                                        <path
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                stroke-width="2"
+                                                d="M12 6v6m0 0v6m0-6h6m-6 0H6"
+                                        ></path>
+                                    </svg>
+                                </div>
+                                <div class="text-sm max-w-full flex-initial">
+                                    {{ post.plus_oners.all.count }}
+                                </div>
+                            </div>
+
+                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                <div slot="avatar">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                         stroke="currentColor"
+                                         class="h-4 w-4">
+                                        <path
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                stroke-width="2"
+                                                d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
+                                        ></path>
+                                    </svg>
+                                </div>
+                                <div class="text-sm max-w-full flex-initial">
+                                    &nbsp;{{ post.resharers.all.count }}
+                                </div>
+                            </div>
+
+                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                <div slot="avatar">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                         stroke="currentColor"
+                                         class="h-4 w-4">
+                                        <path stroke-linecap="round"
+                                              stroke-linejoin="round"
+                                              stroke-width="2"
+                                              d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+                                        ></path>
+                                    </svg>
+                                </div>
+                                <div class="text-sm max-w-full flex-initial">
+                                    &nbsp;{{ post.comments.all.count }}
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
