--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -2,7 +2,7 @@
 {% load image_extras %}
 
 {% block content %}
-    {% for post in posts %}
+    {% for post in object_list %}
         <a href="{% url 'post' post.id %}">
             <div class="border-2 border-transparent rounded-lg m-4 p-2 bg-white">
                 <div class="flex space-x-2">
@@ -10,14 +10,11 @@
                         <img src="{{ post.author.avatar_url }}" alt="avatar of: {{ post.author.name }}"
                              class="rounded-full"/>
                     </div>
-
                     <div class="space-y-1 flex-grow">
-
-                    <div class="flex items-center mb-0.5 justify-between">
-                        <span class="font-semibold text-indigo-900">{{ post.author.name }}</span>
-                        <span class="text-xs text-purple-900 text-opacity-30"> {{ post.time_before_gp_closed }}d before G+ closed</span>
-                    </div>
-
+                        <div class="flex items-center mb-0.5 justify-between">
+                            <span class="font-semibold text-indigo-900">{{ post.author.name }}</span>
+                            <span class="text-xs text-purple-900 text-opacity-30"> {{ post.time_before_gp_closed }}d before G+ closed</span>
+                        </div>
                         {% if post.text %}
                             <p class="text-indigo-900">{{ post.text }}</p>
                         {% endif %}
@@ -68,7 +65,6 @@
                                     {{ post.plus_oners.all.count }}
                                 </div>
                             </div>
-
                             <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
                                 <div slot="avatar">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -86,7 +82,6 @@
                                     &nbsp;{{ post.resharers.all.count }}
                                 </div>
                             </div>
-
                             <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
                                 <div slot="avatar">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -103,13 +98,27 @@
                                     &nbsp;{{ post.comments.all.count }}
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
             </div>
         </a>
-
     {% endfor %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock %}
