--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -16,7 +16,7 @@
                             <span class="text-xs text-purple-900 text-opacity-30"> {{ post.time_before_gp_closed }}d before G+ closed</span>
                         </div>
                         {% if post.text %}
-                            <p class="text-indigo-900">{{ post.text }}</p>
+                            <p class="text-indigo-900 whitespace-pre-line">{{ post.text }}</p>
                         {% endif %}
                         {% if post.media.all %}
                             {% for media in post.media.all %}
@@ -100,56 +100,58 @@
                             </div>
                         </div>
                     </div>
+                    <div class="w-6 flex-none">
+                    </div>
                 </div>
             </div>
         </a>
     {% endfor %}
     <div class="flex m-6 justify-between items-center text-sm text-indigo-900 text-opacity-80">
-        {% if page_obj.has_previous %}
+    {% if page_obj.has_previous %}
         <div class="flex space-x-1">
-        {% else %}
+    {% else %}
         <div class="flex space-x-1 invisible">
-        {% endif %}
-            {% if page_obj.has_previous %}
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page=1">&laquo; first</a>
-                </div>
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                </div>
-            {% else %}
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page=1">&laquo; first</a>
-                </div>
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page=1">previous</a>
-                </div>
-            {% endif %}
-        </div>
-        <span>
+    {% endif %}
+{% if page_obj.has_previous %}
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page=1">&laquo; first</a>
+    </div>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+    </div>
+{% else %}
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page=1">&laquo; first</a>
+    </div>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page=1">previous</a>
+    </div>
+{% endif %}
+</div>
+    <span>
             <span class="font-semibold">{{ page_obj.number }}</span> / {{ page_obj.paginator.num_pages }}
         </span>
-        {% if page_obj.has_next %}
+    {% if page_obj.has_next %}
         <div class="flex space-x-1">
-        {% else %}
+    {% else %}
         <div class="flex space-x-1 invisible">
-        {% endif %}
-            {% if page_obj.has_next %}
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                </div>
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                </div>
-            {% else %}
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page={{ page_obj.paginator.num_pages }}">next</a>
-                </div>
-                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                </div>
-            {% endif %}
-        </div>
-
+    {% endif %}
+{% if page_obj.has_next %}
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page={{ page_obj.next_page_number }}">next</a>
     </div>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+    </div>
+{% else %}
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page={{ page_obj.paginator.num_pages }}">next</a>
+    </div>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+    </div>
+{% endif %}
+</div>
+
+</div>
 {% endblock %}
