--- a/gpav_app/templates/base.html
+++ b/gpav_app/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="flex justify-center">
-    <div class="md:w-3/5">
+    <div class="lg:w-3/5">
         {% block content %}
         {% endblock %}
     </div>
