modified image apperence

--- a/gpav_app/templates/post.html
+++ b/gpav_app/templates/post.html
@@ -28,7 +28,7 @@
                 {% if post.media.all %}
                     {% for media in post.media.all %}
                         <img src="data:image;base64,{{ media.media_data | bin_2_img }}"
-                             class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
+                             class="rounded h-3/12 w-9/12 object-cover border-2 border-purple-50"/>
                     {% endfor %}
                 {% endif %}
                 {% if post.link %}
@@ -42,7 +42,7 @@
                         </p>
                         {% if post.link.preview_image_url %}
                             <img src="{{ post.link.preview_image_url }}"
-                                 class="rounded h-44 w-96 object-cover"/>
+                                 class="rounded h-3/12 w-9/12 object-cover border-2 border-purple-50"/>
                         {% endif %}
                     </a>
                 {% endif %}
@@ -119,8 +119,8 @@
 
                     </div>
                 </div>
-
-                <div class="border-t-2 text-xs text-purple-900 text-opacity-60 p-2">
+                {% if plus_oners or resharers %}
+                    <div class="border-t-2 text-xs text-purple-900 text-opacity-60 p-2">
                     {% if plus_oners %}
                         <p>+1'd by: {{ plus_oners }}</p>
                     {% endif %}
@@ -129,7 +129,7 @@
                         <p>Reshared by: {{ resharers }}</p>
                     {% endif %}
                 </div>
-
+                {% endif %}
                 {% if comments %}
                     {% for comment in comments %}
                         <div class="flex items-center border-b">
