--- a/gpav_app/templates/base.html
+++ b/gpav_app/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html>
 <head>
@@ -14,6 +16,7 @@
             color: rgb(153, 167, 210);
         }
     </style>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 </head>
 <body>
 <div class="flex justify-center">
