--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -20,7 +20,7 @@
                         {% endif %}
                         {% if post.media.all %}
                             {% for media in post.media.all %}
-                                <img src="data:image;base64,{{ media.media_data | bin_2_img }}"
+                                <img src="{% url 'media' media.id %}"
                                      class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
                             {% endfor %}
                         {% endif %}
