--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -1,7 +1,21 @@
 {% extends 'base.html' %}
 {% load image_extras %}
+{% load param_replace %}
 
 {% block content %}
+    <form class=" py-1 px-2 bg-opacity-80 flex space-x-3 items-center" action="" method="get">
+
+        <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+        </svg>
+        <input class="py-1 px-2 rounded-md text-sm text-indigo-900 text-opacity-80" id="keyword" type="text" name="q"
+               value="{{ request.GET.q }}">
+        <input class="py-1 px-2 rounded-md bg-indigo-200 text-sm text-indigo-900" type="submit"
+               value="Search">
+    </form>
+
+
     {% for post in object_list %}
         <a href="{% url 'post' post.id %}">
             <div class="border-2 border-transparent rounded-lg m-4 p-2 bg-white">
@@ -112,19 +126,17 @@
     {% else %}
         <div class="flex space-x-1 invisible">
     {% endif %}
+
+<div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+    <a href="?{% param_replace page=1 %}">&laquo; first</a>
+</div>
 {% if page_obj.has_previous %}
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page=1">&laquo; first</a>
-    </div>
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+        <a href="?{% param_replace page=page_obj.previous_page_number %}">previous</a>
     </div>
 {% else %}
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page=1">&laquo; first</a>
-    </div>
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page=1">previous</a>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+        <a href="?{% param_replace page=1 %}">previous</a>
     </div>
 {% endif %}
 </div>
@@ -137,20 +149,17 @@
         <div class="flex space-x-1 invisible">
     {% endif %}
 {% if page_obj.has_next %}
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page={{ page_obj.next_page_number }}">next</a>
-    </div>
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+        <a href="?{% param_replace page=page_obj.next_page_number %}">next</a>
     </div>
 {% else %}
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page={{ page_obj.paginator.num_pages }}">next</a>
-    </div>
-    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+    <div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+        <a href="?{% param_replace page=page_obj.paginator.num_pages %}">next</a>
     </div>
 {% endif %}
+<div class="flex justify-center items-center py-1 px-2 rounded-md bg-indigo-200">
+    <a href="?{% param_replace page=page_obj.paginator.num_pages %}">last &raquo;</a>
+</div>
 </div>
 
 </div>
