--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -34,7 +34,7 @@
                         {% endif %}
                         {% if post.media.all %}
                             {% for media in post.media.all %}
-                                <img src="{% url 'media' media.id %}"
+                                <img src="{{ media.media_file.url }}"
                                      class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
                             {% endfor %}
                         {% endif %}
