--- a/gpav_app/templates/post.html
+++ b/gpav_app/templates/post.html
@@ -28,7 +28,7 @@
                 {% endif %}
                 {% if post.media.all %}
                     {% for media in post.media.all %}
-                        <img src="{% url 'media' media.id %}"
+                        <img src="{{ media.media_file.url  }}"
                              class="rounded h-3/12 w-9/12 object-cover border-2 border-purple-50"/>
                     {% endfor %}
                 {% endif %}
