--- a/gpav_app/templates/index.html
+++ b/gpav_app/templates/index.html
@@ -15,111 +15,117 @@
                value="Search">
     </form>
 
-
-    {% for post in object_list %}
-        <a href="{% url 'post' post.id %}">
-            <div class="border-2 border-transparent rounded-lg m-4 p-2 bg-white">
-                <div class="flex space-x-2">
-                    <div class="w-12 flex-none">
-                        <img src="{{ post.author.avatar_url }}" alt="avatar of: {{ post.author.name }}"
-                             class="rounded-full"/>
-                    </div>
-                    <div class="space-y-1 flex-grow">
-                        <div class="flex items-center mb-0.5 justify-between">
-                            <span class="font-semibold text-indigo-900">{{ post.author.name }}</span>
-                            <span class="text-xs text-purple-900 text-opacity-30"> {{ post.time_before_gp_closed }}d before G+ closed</span>
+    <div class="grid grid-cols-1">
+        {% for post in object_list %}
+            <a href="{% url 'post' post.id %}">
+                <div class="border-2 border-transparent rounded-lg m-4 p-2 bg-white">
+                    <div class="flex space-x-2">
+                        <div class="w-12 flex-none">
+                            <img src="{{ post.author.avatar_url }}" alt="avatar of: {{ post.author.name }}"
+                                 class="rounded-full"/>
                         </div>
-                        {% if post.text %}
-                            <p class="text-indigo-900 whitespace-pre-line">{{ post.text }}</p>
-                        {% endif %}
-                        {% if post.media.all %}
-                            {% for media in post.media.all %}
-                                <img src="{{ media.media_file.url }}"
-                                     class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
-                            {% endfor %}
-                        {% endif %}
-                        {% if post.link %}
-                            <a href="{{ post.link.url }}" class="hyperlink text-sm space-y-1">
-                                <p class=''>
-                                    {% if post.link.preview_text %}
-                                        {{ post.link.preview_text }}
-                                    {% else %}
-                                        {{ post.link.url }}
+                        <div class="space-y-1 flex flex-col w-full">
+                            <div class="flex items-center mb-0.5 justify-between">
+                                <div class="font-semibold text-indigo-900">{{ post.author.name }}</div>
+                                <div class="flex flex-grow"></div>
+                                <div class="text-xs text-purple-900 text-opacity-30"> {{ post.time_before_gp_closed }}d
+                                    before G+ closed
+                                </div>
+                            </div>
+                            {% if post.text %}
+                                <p class="text-indigo-900 whitespace-pre-line ellipses">{{ post.text }}</p>
+                            {% endif %}
+                            {% if post.media.all %}
+                                {% for media in post.media.all %}
+                                    <img src="{{ media.media_file.url }}"
+                                         class="rounded h-44 w-96 object-cover border-2 border-purple-50"/>
+                                {% endfor %}
+                            {% endif %}
+                            {% if post.link %}
+                                <a href="{{ post.link.url }}" class="hyperlink text-sm space-y-1">
+                                    <p class=''>
+                                        {% if post.link.preview_text %}
+                                            {{ post.link.preview_text }}
+                                        {% else %}
+                                            {{ post.link.url }}
+                                        {% endif %}
+                                    </p>
+                                    {% if post.link.preview_image_url %}
+                                        <img src="{{ post.link.preview_image_url }}"
+                                             class="rounded h-44 w-96 object-cover"/>
                                     {% endif %}
-                                </p>
-                                {% if post.link.preview_image_url %}
-                                    <img src="{{ post.link.preview_image_url }}"
-                                         class="rounded h-44 w-96 object-cover"/>
-                                {% endif %}
-                            </a>
-                        {% endif %}
-                        {% if post.poll %}
-                            <p>This is a poll.</p>
-                            <br>
-                            {% for choice in post.poll.choices.all %}
-                                {{ choice.choice }}
+                                </a>
+                            {% endif %}
+                            {% if post.poll %}
+                                <p>This is a poll.</p>
                                 <br>
-                            {% endfor %}
-                        {% endif %}
-                        <div class="flex justify-end space-x-1 pt-2">
-                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                                <div slot="avatar">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                         stroke="currentColor"
-                                         class="h-4 w-4">
-                                        <path
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
-                                                stroke-width="2"
-                                                d="M12 6v6m0 0v6m0-6h6m-6 0H6"
-                                        ></path>
-                                    </svg>
+                                {% for choice in post.poll.choices.all %}
+                                    {{ choice.choice }}
+                                    <br>
+                                {% endfor %}
+                            {% endif %}
+                            <div class="flex justify-end space-x-1 pt-2">
+                                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                    <div slot="avatar">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                             stroke="currentColor"
+                                             class="h-4 w-4">
+                                            <path
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                    stroke-width="2"
+                                                    d="M12 6v6m0 0v6m0-6h6m-6 0H6"
+                                            ></path>
+                                        </svg>
+                                    </div>
+                                    <div class="text-sm max-w-full flex-initial">
+                                        {{ post.plus_oners.all.count }}
+                                    </div>
                                 </div>
-                                <div class="text-sm max-w-full flex-initial">
-                                    {{ post.plus_oners.all.count }}
+                                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                    <div slot="avatar">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                             stroke="currentColor"
+                                             class="h-4 w-4">
+                                            <path
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                    stroke-width="2"
+                                                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
+                                            ></path>
+                                        </svg>
+                                    </div>
+                                    <div class="text-sm max-w-full flex-initial">
+                                        &nbsp;{{ post.resharers.all.count }}
+                                    </div>
+                                </div>
+                                <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
+                                    <div slot="avatar">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                             stroke="currentColor"
+                                             class="h-4 w-4">
+                                            <path stroke-linecap="round"
+                                                  stroke-linejoin="round"
+                                                  stroke-width="2"
+                                                  d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+                                            ></path>
+                                        </svg>
+                                    </div>
+                                    <div class="text-sm max-w-full flex-initial">
+                                        &nbsp;{{ post.comments.all.count }}
+                                    </div>
                                 </div>
                             </div>
-                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                                <div slot="avatar">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                         stroke="currentColor"
-                                         class="h-4 w-4">
-                                        <path
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
-                                                stroke-width="2"
-                                                d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
-                                        ></path>
-                                    </svg>
-                                </div>
-                                <div class="text-sm max-w-full flex-initial">
-                                    &nbsp;{{ post.resharers.all.count }}
-                                </div>
-                            </div>
-                            <div class="flex justify-center items-center py-1 px-2 rounded-md bg-yellow-500 bg-opacity-30">
-                                <div slot="avatar">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                         stroke="currentColor"
-                                         class="h-4 w-4">
-                                        <path stroke-linecap="round"
-                                              stroke-linejoin="round"
-                                              stroke-width="2"
-                                              d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
-                                        ></path>
-                                    </svg>
-                                </div>
-                                <div class="text-sm max-w-full flex-initial">
-                                    &nbsp;{{ post.comments.all.count }}
-                                </div>
-                            </div>
+
                         </div>
-                    </div>
-                    <div class="w-6 flex-none">
+                        <div class="w-6 flex-none">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </a>
-    {% endfor %}
+            </a>
+        {% endfor %}
+    </div>
+
     <div class="flex m-6 justify-between items-center text-sm text-indigo-900 text-opacity-80">
     {% if page_obj.has_previous %}
         <div class="flex space-x-1">
@@ -164,3 +170,15 @@
 
 </div>
 {% endblock %}
+<style>
+    .ellipses {
+        white-space: pre; /* CSS 2.0 */
+        white-space: pre-wrap; /* CSS 2.1 */
+        white-space: pre-line; /* CSS 3.0 */
+        white-space: -pre-wrap; /* Opera 4-6 */
+        white-space: -o-pre-wrap; /* Opera 7 */
+        white-space: -moz-pre-wrap; /* Mozilla */
+        white-space: -hp-pre-wrap; /* HP Printers */
+        word-wrap: break-word; /* IE 5+ */
+    }
+</style>
