--- a/gpav_app/templates/base.html
+++ b/gpav_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <title>Google+ Archive Viewer</title>
+    <title>Google+ Archive Viewer ❤️</title>
     <style>
         body {
             background-color: rgb(239, 242, 250);
